# agentsgym

./: .gitignore  .yamllint  README.md  biome.json  categories.yaml  railway.json  template.md
.github/workflows/: biome.yml  dev-py.yaml  lint.yml  publish-npm.yml  publish.yml  py-dev.yaml  yamllint.yaml
agentsgym/: README.md  package.json
agentsgym-py/: pyproject.toml
agentsgym-py/agentsgym_py/: client.py  markdown.py  models.py
agentsgym-server/: .dockerignore  Dockerfile  nitro.config.ts  package.json
agentsgym-server/server/routes/: categories.get.ts  search.get.ts
agentsgym-server/server/routes/skills/: [id].get.ts
agentsgym-server/server/utils/: config.ts  markdown.ts  search.ts  store.ts  types.ts
content/: ace-workspace-agent.md
server/: Dockerfile  nitro.config.ts  package-lock.json  package.json  pnpm-lock.yaml  railway.json  tsconfig.json
server/server/api/: health.get.ts  search.get.ts
server/server/api/skills/: [slug].get.ts  index.get.ts  install-command.get.ts  openclaw-skill.get.ts
server/server/utils/: skills.ts
skills/: ace-workspace-agent.md  index.json  qmd.md
skills/ace-workspace-agent/: README.md  SKILL.MD  SKILL.md
skills/qmd/: README.md  SKILL.MD  SKILL.md  testimonials.yaml
template/: SKILL.md
